add font family and style, font rule also added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ricardo Collado Rothschild">
     <link rel="stylesheet" href="./css/main.css">
     <title>Note App - [Dev by Ricardo Collado]</title>
 </head>
 <body>
-    
+    <header>
+        <button class="button-addNew">Add new</button>
+    </header>
+    <main class="main-container"></main>
     <script src="./js/main.js"></script>
 </body>
 </html>
