several Commits: 1) Provide a resize:none to the textarea, so user cant modify the size. 2) Create a desktop.scss, to handle the responsive design for screen over 800px. 3) Provide style to the main-container for screen over 800px

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ricardo Collado Rothschild">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width:800px)">
     <title>Note App - [Dev by Ricardo Collado]</title>
 </head>
 <body>
